objects/gvp__Sales_Sequence_Step_Status__c.object
<CustomObject>
    <description>Visit Sequence Step Status</description>
    <fields>
        <fullName>gvp__Account_Call__c</fullName>
        <description>Account Call</description>
        <label>Account Call</label>
        <referenceTo>gvp__Account_Call__c</referenceTo>
        <relationshipLabel>Visit Sequence Step Statuses</relationshipLabel>
        <relationshipName>Sales_Sequence_Step_Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gvp__Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Complete</description>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Sales_Sequence_Step__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Visit Sequence Step</description>
        <label>Visit Sequence Step</label>
        <referenceTo>gvp__Sales_Sequence_Step__c</referenceTo>
        <relationshipLabel>Visit Sequence Step Statuses</relationshipLabel>
        <relationshipName>Sales_Sequence_Step_Statuses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Sequence Step Status</label>
    <nameField>
        <label>Sequence Step Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sequence Step Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>